--- a/motostix/package.json
+++ b/motostix/package.json
@@ -2,6 +2,9 @@
   "name": "moto-stix",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20 <21"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,7 +14,20 @@
     "test:watch": "jest --config jest.config.js --watch",
     "test:ci": "jest --config jest.config.js --ci --reporters=default --reporters=jest-junit",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "prepush": "npm run test && npm run lint && knip"
+    "prepush": "npm run test && npm run lint && knip",
+    "prepare": "husky",
+    "precommit:quick": "lint-staged",
+    "precommit:full": "npm run typecheck && npm run lint && npm run test -w 1",
+    "analyze": "cross-env ANALYZE=true next build"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{md,css,json}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@auth/firebase-adapter": "^2.7.4",
@@ -73,13 +89,16 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/webpack": "^5.28.5",
+    "cross-env": "^7.0.3",
     "depcheck": "^1.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
     "jest-junit": "^16.0.0",
+    "lint-staged": "^15.2.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.3.4",
